--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,14 @@
+$bg-color-main: #1c1c1c;
+$bg-footer: #303030;
+
+$brand-color: rgb(242, 132, 45);
+$text-grey: #464646;
+
 // Body
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
