--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,12 @@
 //! General
 @import "general.scss";
 
+//! Variables
+@import "variables.scss";
+
+//! Global
+@import "global.scss";
+
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
