--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,7 +17,9 @@
 @import "global.scss";
 
 // Bootstrap
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 // Fontawesome
-@import "~@fortawesome/fontawesome-free/css/all.css";
+// @import "~@fortawesome/fontawesome-free/css/all.css";
+@import "../../node_modules/@fortawesome/fontawesome-free/css/all.css";
