--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8209,6 +8209,14 @@ section.dark .blue:nth-child(2n)::before {
   width: 65%;
 }
 
+.w-40 {
+  width: 40%;
+}
+
+.w-60 {
+  width: 60%;
+}
+
 .bg-orange {
   background-color: #f68630;
   border-radius: 0px;
@@ -8253,6 +8261,26 @@ section.dark .blue:nth-child(2n)::before {
 }
 
 .yellow-button:hover {
+  filter: blur(2);
+  transition: 1s;
+}
+
+.dark-button {
+  background-color: #000000;
+  border: none;
+  border-radius: 0px;
+  color: #fff;
+  font-weight: bold;
+  padding: 8px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 8px;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.dark-button:hover {
   filter: invert(100%);
   transition: 1s;
 }
